clusters/production/identity/vaultwarden-release.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vaultwarden
  namespace: identity
spec:
  selector:
    matchLabels:
      app: vaultwarden
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: vaultwarden
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
      - env:
        - name: TZ
          value: America\Toronto
        imagePullPolicy: IfNotPresent
        name: vaultwarden
        securityContext:
          allowPrivilegeEscalation: false
        image: vaultwarden/server:1.37.4 # {"$imagepolicy": "flux-system:vaultwarden"}
        startupProbe:
          tcpSocket:
            port: 80
          failureThreshold: 60
          periodSeconds: 5
        livenessProbe:
          tcpSocket:
            port: 80
          periodSeconds: 20
        readinessProbe:
          tcpSocket:
            port: 80
          periodSeconds: 10
        resources:
          requests:
            cpu: "100m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "1Gi"
        volumeMounts:
        - mountPath: /data
          name: vaultwarden-data
      hostname: vaultwarden
      volumes:
      - name: vaultwarden-data
        persistentVolumeClaim:
          claimName: pvc-vaultwarden-data
---
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden
  namespace: identity
spec:
  ports:
  - name: vaultwarden-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: vaultwarden
  type: ClusterIP
