clusters/production/identity/vault-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vault
  namespace: default
spec:
  parentRefs:
  - name: external
    namespace: gateway
    sectionName: https
  hostnames:
  - vault.rees.ca
  rules:
  - backendRefs:
    - name: vaultwarden
      port: 80
