clusters/production/identity/vaultwarden-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: vault-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: "vault.rees.ca"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: vaultwarden
            port:
              number: 80
  tls:
  - hosts:
    - vault.rees.ca
    secretName: vaultwarden-tls
